# html-editor

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  HTML_editor-Test.pro  HTML_editor.pro  README.md  clang-fixes.yaml  dconfig  editor_settings.cpp  editor_settings.h  editor_settings.ui  editorsettings.cpp  editorsettings.h  editorsettings.ui  novo.txt  proba.txt  run-clang-format.py
.ccls-cache/@@home@ilija@Documents@07-html-editor/: @usr@include@c++@11@bits@alloc_traits.h.blob  @usr@include@c++@11@bits@allocator.h.blob  @usr@include@c++@11@bits@concept_check.h.blob  @usr@include@c++@11@bits@cpp_type_traits.h.blob  @usr@include@c++@11@bits@exception.h.blob  @usr@include@c++@11@bits@exception_defines.h.blob  @usr@include@c++@11@bits@functexcept.h.blob  @usr@include@c++@11@bits@functional_hash.h.blob  @usr@include@c++@11@bits@hash_bytes.h.blob  @usr@include@c++@11@bits@memoryfwd.h.blob  @usr@include@c++@11@bits@move.h.blob  @usr@include@c++@11@bits@predefined_ops.h.blob  @usr@include@c++@11@bits@ptr_traits.h.blob  @usr@include@c++@11@bits@range_access.h.blob  @usr@include@c++@11@bits@stl_algobase.h.blob  @usr@include@c++@11@bits@stl_bvector.h.blob  @usr@include@c++@11@bits@stl_construct.h.blob  @usr@include@c++@11@bits@stl_iterator.h.blob  @usr@include@c++@11@bits@stl_iterator_base_funcs.h.blob  @usr@include@c++@11@bits@stl_iterator_base_types.h.blob  @usr@include@c++@11@bits@stl_pair.h.blob  @usr@include@c++@11@bits@stl_uninitialized.h.blob  @usr@include@c++@11@bits@stl_vector.h.blob  @usr@include@c++@11@new.blob  (+23 more)
docs/: add_new_tab_use_case.md  code_editing_use_case.md  edit_settings_use_case.md  editor_settings_use_case.md  ftv_manipulation_use_case.md  html_editor_class_diagram.drawio  search.md
form/: mainwindow.ui
resources/: res.qrc
src/: htmlsyntaxhighlighter.cpp  htmlsyntaxhighlighter.h  main.cpp  mainwindow.cpp  mainwindow.h
tests/: main.cpp
(+332 files in other folders)
